Fix for distorting non-square images

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -162,5 +162,5 @@
 
 .logo-big {
 	width: 7rem;
-	height: 7rem;
+	height: auto;
 }
